--- a/P4Grupo1.ipynb
+++ b/P4Grupo1.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "2erkRESRnDQu"
       },
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "cN8Wiq4rmfuS"
       },
@@ -201,7 +201,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se generan vectores x e y que cubren todo el dominio de la función objetivo, dividiendo el rango de -100 a 100 en 1000 puntos. Despúes se crea una cuadrícula bidimensional (meshgrid) usando los vectores x e y, y se evalúa la función objetivo en cada par de coordenadas. Los resultados se almacenan en una matriz bidimensional fx."
+        "Se generan vectores x e y que cubren todo el dominio de la función objetivo, dividiendo el rango de -100 a 100 en 1000 puntos. Despúes, se crea una cuadrícula bidimensional (meshgrid) usando los vectores x e y, y se evalúa la función objetivo en cada par de coordenadas. Los resultados se almacenan en una matriz bidimensional fx."
       ],
       "metadata": {
         "id": "HrzNDIVHQli8"
@@ -209,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "WAlY6-NfoCWA"
       },
@@ -225,11 +225,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "l9W2VtXloRbF",
         "outputId": "5675a4d6-927f-42ee-ddb6-c43c4829eeb3"
@@ -270,7 +269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Analizando gráficamente la función observamos que el intervalor de [-100, 100] es demasiado grande y existen demasiados valores inecesarios. Por ello vamos a acotarla entre [-5. 5] para eliminar dicho problema."
+        "Analizando gráficamente la función, observamos que el intervalo de [-100, 100] es demasiado grande y existen demasiados valores innecesarios. Por ello, vamos a acotarla entre [-5. 5] para eliminar dicho problema."
       ],
       "metadata": {
         "id": "7keeceQOMdGA"
@@ -278,11 +277,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8XCwD9zTgMsE",
         "outputId": "93829f2a-e2ef-4d0c-b002-f52226f7fcf0"
@@ -360,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -402,7 +400,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Posteriormente pasamos a la generación de los invididuos de la población. Es relevante mencionar que los individuos están formados por dos dimensiones ( Cada individuo tendrá dos genes, ya que la función \"attr_uniform\" se repetirá dos veces), como podemos ver en el ejemplo."
+        "Posteriormente, pasamos a la generación de los invididuos de la población. Es relevante mencionar que los individuos están formados por dos dimensiones ( Cada individuo tendrá dos genes, ya que la función \"attr_uniform\" se repetirá dos veces), como podemos ver en el ejemplo."
       ],
       "metadata": {
         "id": "lfi74-jwSaF9"
@@ -410,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -451,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "id": "r4dSQQSFm56t",
         "colab": {
@@ -499,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "Zl1hnIGjpFrp"
       },
@@ -533,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": null,
       "metadata": {
         "id": "AOrQnL-lpMnZ"
       },
@@ -586,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -658,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -744,7 +742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "YWbM9BBvvmPt"
       },
@@ -759,7 +757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {
         "id": "068UOxqj4OVX",
         "colab": {
@@ -813,7 +811,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ahora ya tenemos una idea general de como es la función. Se puede ver que existen muchos minimos locales donde el algoritmo podría tener problemas y el mínimo absoluto se encuentra en el valor 0."
+        "Ahora ya tenemos una idea general de como es la función. Se puede ver que existen muchos mínimos locales donde el algoritmo podría tener problemas y el mínimo absoluto se encuentra en el valor 0."
       ],
       "metadata": {
         "id": "9wjF3zq9W1sg"
@@ -831,7 +829,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Vamos a realizar el mismo proceso que en el Ejercicio 1 para crear el algoritmo genético, pero esta vez los individuos van a ser de 10 dimensiones. Esto hará que varie el tamaño de la población inicial ya que el genotipo de los individuos va a ser de mucho más tamaño. Como se puede ver en el individuo de ejemplo, esta formado por 10 dimensiones."
+        "Vamos a realizar el mismo proceso que en el Ejercicio 1 para crear el algoritmo genético, pero esta vez los individuos van a ser de 10 dimensiones. Esto hará que varíe el tamaño de la población inicial ya que el genotipo de los individuos va a ser de mucho más tamaño. Como se puede ver en el individuo de ejemplo, esta formado por 10 dimensiones."
       ],
       "metadata": {
         "id": "4tOo4J8cXjG7"
@@ -839,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -914,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "id": "Br2apWgs6BnA"
       },
@@ -937,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
         "id": "e8F7fxDg1nT9"
       },
@@ -966,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "id": "AsfsPlsf2hF5"
       },
@@ -1031,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1138,7 +1136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1305,7 +1303,7 @@
         "id": "T0_lmOjxbbMx",
         "outputId": "b91622a1-2c2c-43a0-88da-30ac31a03d36"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1504,7 +1502,7 @@
         "id": "p9psyvbTisTg",
         "outputId": "f95cc43e-66c9-4290-9bf0-605e903a1484"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
