--- a/CapstoneGrupo1.ipynb
+++ b/CapstoneGrupo1.ipynb
@@ -151,7 +151,7 @@
       "source": [
         "El conjunto de datos que se va a utilizar, es sobre enfermedades oculares, como se ha comentado antes. 1038 imágenes son ojos que sufren cataratas, 1098 retinopatía diabética, 1007 glaucoma y 1074 son ojos sanos.\n",
         "\n",
-        "Las imagenes son una exploración oftalmologica del fondo de ojo (parte posterior del interior del ojo que comprende la retina y el nervio óptico). Analizando el fondo de ojo, los oftamólogos puede identificar diversas enfermedades. Pero en muchos casos, puede ser complicado distinguir estas enfermedades sin ningún tipo de información clínica previa. Pero hay patrones que se pueden seguir para distinguirlas. En el caso del glaucoma, hay un adelgazamiento del anillo del nervio óptico, por lo que, un anillo en proporción más grueso indica un estado más avanzado de glaucoma. (https://fseneca.es/web/deep-learning-para-la-deteccion-precoz-del-glaucoma) En el caso de las cataratas, los pacientes presentan daños en el cristalino, se ve porque este estará opaco o nublado, es decir, más borrosa y con menos luz (disminuye la calidad de la imagen). En la retinopatía diabética se pueden observar hemorragias (manchas rojas) exudados (manchas blancas) y cambios en los vasos de la retina."
+        "Las imagenes son una exploración oftalmologica del fondo de ojo (parte posterior del interior del ojo que comprende la retina y el nervio óptico). Analizando el fondo de ojo, los oftamólogos puede identificar diversas enfermedades. Pero en muchos casos, puede ser complicado distinguir estas enfermedades sin ningún tipo de información clínica previa. Pero hay patrones que se pueden seguir para distinguirlas. En el caso del glaucoma, hay un adelgazamiento del anillo del nervio óptico, por lo que, un anillo en proporción más grueso indica un estado más avanzado de glaucoma (https://fseneca.es/web/deep-learning-para-la-deteccion-precoz-del-glaucoma). En el caso de las cataratas, los pacientes presentan daños en el cristalino, se ve porque este estará opaco o nublado, es decir, más borrosa y con menos luz (disminuye la calidad de la imagen). En la retinopatía diabética se pueden observar hemorragias (manchas rojas) exudados (manchas blancas) y cambios en los vasos de la retina."
       ]
     },
     {
@@ -5121,8 +5121,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🔴 medida de exito : minimo 25% (4 categorias)\n",
-        "\n",
         "La medida de éxito a utilizar es mínimo 25% ya que tenemos 4 categorías balanceadas. Con esto garantizamos que el modelo distinga todas las clases y no solo la mayoritaria (si la hubiera), aunque en nuestro caso hemos conseguido que sean todas iguales en cuanto a número de imágenes. Con esta medida aprenderá patrones de todas las clases."
       ],
       "metadata": {
@@ -5347,7 +5345,6 @@
         "\n",
         "network = Model(inputs=input_layer, outputs=output_layer)\n",
         "\n",
-        "# Optimizador, función de pérdida y métricas\n",
         "network.compile(optimizer=\"adam\", loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "\n",
@@ -5473,7 +5470,6 @@
         "\n",
         "network = Model(inputs=input_layer, outputs=output_layer)\n",
         "\n",
-        "# Optimizador, función de pérdida y métricas\n",
         "network.compile(optimizer=\"adam\", loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "\n",
@@ -5602,45 +5598,41 @@
         "\n",
         "    return modelo\n",
         "\n",
-        "# Número de folds (k)\n",
         "k = 4\n",
         "num_samples = len(train_images_resampled)\n",
         "num_val_samples = num_samples // k\n",
         "num_epochs = 30\n",
         "\n",
-        "# Inicializa KFold\n",
+        "#Inicializamos KFold\n",
         "kf = KFold(n_splits=k, shuffle=True, random_state=42)\n",
         "\n",
-        "# Inicializa listas para almacenar los historiales de entrenamiento y validación\n",
         "all_train_histories = []\n",
         "all_val_histories = []\n",
         "\n",
-        "# Itera sobre los folds\n",
         "for train_index, val_index in kf.split(train_images_resampled):\n",
         "    print(\"Entrenando en el fold...\")\n",
         "\n",
-        "    # Separa los datos en conjuntos de entrenamiento y validación\n",
+        "    #Separación los datos en conjuntos de entrenamiento y validación como se ha explicado antes\n",
         "    X_train, X_val = train_images_resampled[train_index], train_images_resampled[val_index]\n",
         "    y_train, y_val = train_labels_resampled[train_index], train_labels_resampled[val_index]\n",
         "\n",
-        "    # Construcción del modelo Keras (asegúrate de tener la función construir_modelo definida)\n",
         "    model = construir_modelo()\n",
         "\n",
-        "    # Inicializa listas para almacenar los historiales de entrenamiento y validación de este fold\n",
+        "    #Iniciamos listas para almacenar los historiales de entrenamiento y validación de este fold\n",
         "    train_history_fold = []\n",
         "    val_history_fold = []\n",
         "\n",
-        "    # Entrenar el modelo y almacenar el historial\n",
+        "    #Entrenamiento\n",
         "    history = model.fit(X_train, y_train, epochs=num_epochs, batch_size=60, validation_data=(X_val, y_val), verbose=1)\n",
         "\n",
-        "    # Almacena los historiales de este fold en las listas generales\n",
+        "    #Almacenamos los historiales de este fold en las listas generales\n",
         "    train_history_fold = history.history['loss']\n",
         "    val_history_fold = history.history['val_loss']\n",
         "\n",
         "    all_train_histories.append(train_history_fold)\n",
         "    all_val_histories.append(val_history_fold)\n",
         "\n",
-        "# Graficar la evolución de la pérdida para cada fold\n",
+        "#Graficamos la evolución de la pérdida para cada fold\n",
         "plt.figure(figsize=(12, 6))\n",
         "for i, fold_history in enumerate(all_train_histories):\n",
         "    plt.plot(range(1, num_epochs + 1), fold_history, label=f'Fold {i + 1} - Train')\n",
@@ -5958,7 +5950,6 @@
         "\n",
         "network = Model(inputs=input_layer, outputs=output_layer)\n",
         "\n",
-        "# Optimizador, función de pérdida y métricas\n",
         "network.compile(optimizer=\"adam\", loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "\n",
