--- a/CapstoneGrupo1.ipynb
+++ b/CapstoneGrupo1.ipynb
@@ -462,7 +462,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " Observamos que los datos no están equipaarados. Vamos a balancearlas aplicando una técnica denominada **sobremuestreo** (vamos a utilizar la biblioteca imblearn). El objetivo del balanceo de clases en el conjunto de entrenamiento es ayudar al modelo a aprender de manera más efectiva las características de la clase minoritaria, evitando que el modelo se sesgue hacia la clase mayoritaria debido a la gran cantidad de ejemplos de esa clase.\n",
+        " Observamos que los datos no están equiparados. Vamos a balancearlas aplicando una técnica denominada **sobremuestreo** (vamos a utilizar la biblioteca imblearn). El objetivo del balanceo de clases en el conjunto de entrenamiento es ayudar al modelo a aprender de manera más efectiva las características de la clase minoritaria, evitando que el modelo se sesgue hacia la clase mayoritaria debido a la gran cantidad de ejemplos de esa clase.\n",
         "\n",
         "Además, en este caso las dos más bajas son la retinopatía diabética y la normal. En el caso de la normal esto puede suponer un problema, ya que el modelo podría sesgarse hacias las otras 3 clases, que se corresponden con las enfermedades. Esto puede generar un modelo que devuelve más falsos positivos de los deseados (en términos de enfermedades). Los remedios para estas enfermedades se deben aplicar antes de llegar a un estado de degeneración muy alto, por lo que aplicarlos pronto conviene. Si se aplican a un paciente sano puede resultar peligroso. Por ello, es muy importante evitar cualquier tipo de sesgo que tienda a devolver falsos positivos.\n",
         "\n",
@@ -1700,7 +1700,7 @@
         "**Bibliografía:** https://docs.bvsalud.org/biblioref/2018/05/883697/importancia-calculo-sensibilidad-y-especifidad.pdf\n",
         "https://www.sergas.es/Saude-publica/Documents/1932/6-Ayuda%20Pruebas%20diagnsticas.pdf\n",
         "\n",
-        "**Nota:** Podemos deducir que el modelo acierta con menos precisión la retinopatia diabética debido a que las alteraciones en los vasos sanguineos pueden ser muy subjetivas porque hay mucha variablidad entre pacientes."
+        "**Nota:** Podemos deducir que el modelo acierta con menos precisión la retinopatia diabética puede ser debido a dos causas: o porque era el conjuntos de imagenes que minoritario antes del sobremuestreo o porque las alteraciones en los vasos sanguineos pueden ser muy subjetivas porque hay mucha variablidad entre pacientes."
       ],
       "metadata": {
         "id": "7qwD8PRWuBnx"
