--- a/CapstoneGrupo1.ipynb
+++ b/CapstoneGrupo1.ipynb
@@ -151,7 +151,7 @@
       "source": [
         "El conjunto de datos que se va a utilizar, es sobre enfermedades oculares, como se ha comentado antes. 1038 imágenes son ojos que sufren cataratas, 1098 retinopatía diabética, 1007 glaucoma y 1074 son ojos sanos.\n",
         "\n",
-        "Las imagenes son una exploración oftalmologica del fondo de ojo (parte posterior del interior del ojo que comprende la retina y el nervio óptico). Analizando el fondo de ojo, los oftamólogos puede identificar diversas enfermedades. Pero en muchos casos, puede ser complicado distinguir estas enfermedades sin ningún tipo de información clínica previa. Pero hay patrones que se pueden seguir para distinguirlas. En el caso del glaucoma, hay un adelgazamiento del anillo del nervio óptico, por lo que, un anillo en proporción más grueso indica un estado más avanzado de glaucoma (https://fseneca.es/web/deep-learning-para-la-deteccion-precoz-del-glaucoma). En el caso de las cataratas, los pacientes presentan daños en el cristalino, se ve porque este estará opaco o nublado, es decir, más borrosa y con menos luz (disminuye la calidad de la imagen). En la retinopatía diabética se pueden observar hemorragias (manchas rojas) exudados (manchas blancas) y cambios en los vasos de la retina."
+        "Las imagenes son una exploración oftalmologica del fondo de ojo (parte posterior del interior del ojo que comprende la retina y el nervio óptico). Analizando el fondo de ojo, los oftamólogos puede identificar diversas enfermedades. Pero en muchos casos, puede ser complicado distinguir estas enfermedades sin ningún tipo de información clínica previa. Pero hay patrones que se pueden seguir para distinguirlas. En el caso del glaucoma, hay un adelgazamiento del anillo del nervio óptico, por lo que, un anillo en proporción más grueso indica un estado más avanzado de glaucoma (https://fseneca.es/web/deep-learning-para-la-deteccion-precoz-del-glaucoma). En el caso de las cataratas, los pacientes presentan daños en el cristalino, se ve porque este estará opaco o nublado, es decir, más borrosa y con menos luz (disminuye la calidad de la imagen). En la retinopatía diabética se pueden observar hemorragias (manchas rojas) exudados (manchas blancas) y cambios en los vasos de la retina. (**Fuente:** Doctora Ana Martín Hospital El Escorial)"
       ]
     },
     {
@@ -351,7 +351,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Estamos tratando un problema multiclase, por lo que es importante utilizar las etiquetas como categóricas. Es decir, se tendrá un vector de tamaño 1x4 donde se guardará un 0 si no pertenece a esa clase y un 1 en caso contrario. Las 4 clases son las mencinonadas antes. Nos interesa tener estas etiquetas categóricas para usar como función de pérdida 'categorical_crossentropy'. Con esta función se calcula la diferencia de las distribuciones de probabilidad entre el valor que devuelve y el esperado. Penaliza así las predicciones que están muy lejos del valor esperado y favorece a las que están cerca."
+        "Estamos tratando un problema multiclase, por lo que es importante utilizar las etiquetas como categóricas. Es decir, se tendrá un vector de tamaño 1x4 donde se guardará un 0 si no pertenece a esa clase y un 1 en caso contrario. Las 4 clases son las mencinonadas antes. Nos interesa tener estas etiquetas categóricas para usar como función de pérdida *categorical_crossentropy*. Con esta función se calcula la diferencia de las distribuciones de probabilidad entre el valor que devuelve y el esperado. Penaliza así las predicciones que están muy lejos del valor esperado y favorece a las que están cerca."
       ],
       "metadata": {
         "id": "dSZ1z2mHho3Z"
@@ -660,7 +660,7 @@
       },
       "source": [
         "\n",
-        "Para este proyecto hemos usado varios métodos de aprendizaje automático para procesar las imágenes antes de entrenar el modelo y evaluarlo. Lo primero que se ha utilizado es una función para convertir los datos a tensores y normalizarlos. Para continuar, hemos mezclado las imágenes mediante 'split_and_shuffle_data' para evitar sesgos y porque las imágenes al inicio estaban ordenadas por clase.\n",
+        "Para este proyecto hemos usado varios métodos de aprendizaje automático para procesar las imágenes antes de entrenar el modelo y evaluarlo. Lo primero que se ha utilizado es una función para convertir los datos a tensores y normalizarlos. Para continuar, hemos mezclado las imágenes mediante *split_and_shuffle_data* para evitar sesgos y porque las imágenes al inicio estaban ordenadas por clase.\n",
         "\n",
         "Por otro lado, era necesario pasar las etiquetas a categóricas, para resolver el problema multiclase. Por último, hemos utilizado el sobremuestreo para conseguir un equilibrio entre clases y evitar sesgos hacia las mayoritarias."
       ]
@@ -679,9 +679,9 @@
       "source": [
         "Vamos a utilizar redes convolucionales debido a que dan muy buen resultado en problemas de reconocimiento de imágenes. Estas utilizan filtros para detectar pequeños patrones de las imágenes y generar así una jerarquía. Es decir, detectan bordes, colores o texturas y generan con ello patrones.\n",
         "\n",
-        "Además, permiten utilizar capas Pooling, que reducen la dimensión espacial del mapa de características sin perder información. Esto hace que la red sea más eficiente e invariante a cambios en las posiciones de las características. Otro tipo de capa que vamos a usar es la densa, que se utiliza tras las capas de convolución y pooling para aplanar el mapa de características.\n",
+        "Además, permiten utilizar capas *Pooling*, que reducen la dimensión espacial del mapa de características sin perder información. Esto hace que la red sea más eficiente e invariante a cambios en las posiciones de las características. Otro tipo de capa que vamos a usar es la densa, que se utiliza tras las capas de convolución y *Pooling* para aplanar el mapa de características.\n",
         "\n",
-        "Es importante comentar que son enfermedades degenerativas y por tanto, cuanto antes se detecten mejor. En el campo de la medicina las redes neuronales convolucionales podrían tener un gran alcance. En un estudio sobre el glaucoma realizado en la Universidad ICESI se obtuvieron resultados con precisiones entre el 90% y el 99%, se utilizaron varios modelos de redes neuronales convolucionales. Puede ser un gran avance para la medicina encontrar patrones, que no se habían estudiado previamente, que diagnostiquen correctamente enfermedades antes de tiempo.\n",
+        "Es importante comentar que son enfermedades degenerativas y por tanto, cuanto antes se detecten mejor. En el campo de la medicina las redes neuronales convolucionales podrían tener un gran alcance. En un **estudio sobre el glaucoma** realizado en la Universidad ICESI se obtuvieron resultados con precisiones entre el **90%** y el **99%**, se utilizaron varios modelos de redes neuronales convolucionales. Puede ser un gran avance para la medicina encontrar patrones, que no se habían estudiado previamente, que diagnostiquen correctamente enfermedades antes de tiempo.\n",
         "\n",
         "*Documento de la Universidad comentada:*\n",
         "https://repository.icesi.edu.co/biblioteca_digital/bitstream/10906/95207/1/T02445.pdf"
@@ -704,7 +704,7 @@
       "source": [
         "Modelo de una red simple que consigue minimo el 25%:\n",
         "\n",
-        "Vamos a utilizar 3 capas, la de entrada tendrá un tamaño de 128x128x3. La siguiente capa será 'flat' para convertir la entrada de 3 dimensiones en una de una dimensión, aplanarlo. La tercera será la capa de salida con función de activación softmax, ya que es un problema multiclase. Como optimizador usaremos SGD para evaluar por lotes y actualizar los pesos en dirección opuesta al gradiente."
+        "Vamos a utilizar 3 capas, la de entrada tendrá un tamaño de 128x128x3. La siguiente capa será *flat* para convertir la entrada de 3 dimensiones en una de una dimensión, aplanarlo. La tercera será la capa de salida con función de activación *softmax*, ya que es un problema multiclase. Como optimizador usaremos *SGD* para evaluar por lotes y actualizar los pesos en dirección opuesta al gradiente."
       ],
       "metadata": {
         "id": "tDSLEVwgqRVr"
@@ -785,7 +785,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Modelo añadiendo convolucionales:\n",
+        "**Modelo añadiendo convolucionales:**\n",
         "\n",
         "Mantenemos la función de activación y la de pérdida, pero añadiendo una capa convolucional seguida de una de pooling. Con esto aumentamos el tamaño del filtro y conseguiremos una mayor precisión, ya que las capas convolucionales están especializadas en reconocimiento de imágenes.\n",
         "\n",
@@ -882,13 +882,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Modelo sobreentrenado:\n",
+        "**Modelo sobreentrenado:**\n",
         "\n",
         "Vamos a generar un modelo sobreentrenado para averiguar dónde está la frontera entre el sobreajuste y el subajuste, con esto se consigue el modelo perfecto.\n",
         "\n",
-        "Para ello, vamos a utilizar una capa de entrada, seguida de 3 grupos de dos capas convolucionales con función de activación ReLu. Gracias a esta función eliminamos la linealidad del modelo. También usaremos padding para mantener el tamaño de entrada hasta la salida añadiendo 0 donde sea necesario.\n",
+        "Para ello, vamos a utilizar una capa de entrada, seguida de 3 grupos de dos capas convolucionales con función de activación *ReLu*. Gracias a esta función eliminamos la linealidad del modelo. También usaremos padding para mantener el tamaño de entrada hasta la salida añadiendo 0 donde sea necesario.\n",
         "\n",
-        "Por último, usamos una capa flat para aplanar el mapa de características y una densa para guardar la clasificación final con función de activación softmax."
+        "Por último, usamos una capa flat para aplanar el mapa de características y una densa para guardar la clasificación final con función de activación *softmax*."
       ],
       "metadata": {
         "id": "BY46YzKiS3S_"
@@ -1618,7 +1618,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Obervamos que alcanzamos una accuracy final del 85%, pero esto no es suficiente para analizar los resultados. Vamos a hacer la matriz de confusión de las prediciones de las imagenes de test."
+        "Obervamos que alcanzamos una **accuracy final** del **85%**, pero esto no es suficiente para analizar los resultados. Vamos a hacer la matriz de confusión de las prediciones de las imagenes de test."
       ],
       "metadata": {
         "id": "6OcP6df01icU"
@@ -1700,7 +1700,7 @@
         "**Bibliografía:** https://docs.bvsalud.org/biblioref/2018/05/883697/importancia-calculo-sensibilidad-y-especifidad.pdf\n",
         "https://www.sergas.es/Saude-publica/Documents/1932/6-Ayuda%20Pruebas%20diagnsticas.pdf\n",
         "\n",
-        "**Nota:** Podemos deducir que el modelo acierta con menos precisión la retinopatia diabética puede ser debido a dos causas: o porque era el conjuntos de imagenes que minoritario antes del sobremuestreo o porque las alteraciones en los vasos sanguineos pueden ser muy subjetivas porque hay mucha variablidad entre pacientes."
+        ">**Nota:** Podemos deducir que el modelo acierta con menos precisión la retinopatia diabética puede ser debido a dos causas: o porque era el conjuntos de imagenes que minoritario antes del sobremuestreo o porque las alteraciones en los vasos sanguineos pueden ser muy subjetivas porque hay mucha variablidad entre pacientes."
       ],
       "metadata": {
         "id": "7qwD8PRWuBnx"
